--- a/application.yml
+++ b/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/course
-    username: root
-    password:
+    url: jdbc:mysql://localhost:3306/product_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    username: product_user
+    password: product_pass
     driver-class-name: com.mysql.cj.jdbc.Driver
  
   jpa:
